updated app component, about component, and home component. added greeting component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,51 @@
-<p>about works!</p>
+<h1>About</h1>
+
+<div
+  class="container"
+  fxLayout="column"
+  fxLayout.md="row"
+  fxLayoutAlign="center stretch"
+>
+  <div
+    class="cardWrap"
+    fxLayout.lt-md="column"
+    fxLayout.md="column"
+    fxLayout="row"
+    fxFlex.md="50"
+    fxLayoutAligmnet="space-between center"
+    fxLayoutGap="20px"
+  >
+    <div fxFlex.lt-md="100" fxFlex="33" class="row1">
+      <img
+        src="https://i.pinimg.com/originals/cd/7a/9a/cd7a9aa16ac398189ad044305ddbd299.jpg"
+      />
+    </div>
+    <div fxFlex.lt-md="100" fxFlex="67">
+      <mat-card>
+        I am Lauryn Sue, a fresh graduate student from Sarawak, Malaysia. A
+        tech-savvy, an aspiring web developer, and a constant learner who is
+        keen to explore the technologies advancement while evolving my career
+        goals.
+      </mat-card>
+    </div>
+  </div>
+  <div
+    class="cardWrap"
+    fxLayout.lt-md="column"
+    fxLayout.md="column"
+    fxLayout="row"
+    fxFlex.md="50"
+    fxLayoutAligmnet="space-between center"
+    fxLayoutGap="20px"
+    class="row2"
+  >
+    <div fxFlex.lt-md="100" fxFlex="50">
+      <h1>1</h1>
+      <h3>Numbers of Completed Projects</h3>
+    </div>
+    <div fxFlex.lt-md="100" fxFlex="50" class="downloadButton">
+      <button mat-stroked-button>Download CV</button>
+      <button mat-stroked-button>Download Resume</button>
+    </div>
+  </div>
+</div>
