--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,23 @@
         >
       </mat-list-item>
     </mat-list>
+    <ul class="navbar-items">
+      <li>
+        <i class="fab fa-linkedin"></i>
+      </li>
+
+      <li>
+        <i class="fas fa-envelope"></i>
+      </li>
+
+      <li>
+        <i class="fab fa-instagram"></i>
+      </li>
+
+      <li>
+        <i class="fab fa-github"></i>
+      </li>
+    </ul>
     <p class="copyright"><i class="far fa-copyright"></i> 2021 LAURYN SUE</p>
   </mat-sidenav>
 
