--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,7 @@
-<img src="https://i.imgur.com/pO57okn.png" alt="Yellow lady PNG" />
+<script src="/personal-website/src/assets/js/home.component.js"></script>
 
-<div class="wrapper">
-  <span class="mainTitle">Lauryn Sue</span>
-  <span class="subTitle">An aspiring web developer</span>
-  <ul class="navbar-items">
-    <li>
-      <i class="fab fa-linkedin"></i>
-    </li>
-
-    <li>
-      <i class="fas fa-envelope"></i>
-    </li>
-
-    <li>
-      <i class="fab fa-instagram"></i>
-    </li>
-
-    <li>
-      <i class="fab fa-github"></i>
-    </li>
-  </ul>
+<div fxLayout="column" fxLayoutAlign="center center" class="greeting">
+  <div fxFlex="row">
+    <app-greeting></app-greeting>
+  </div>
 </div>
