added page animation to workpage, experiencepage, and contactpage. created contactpage.

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,6 @@
-<p>contact works!</p>
+<h1>Contact</h1>
+<mat-card>
+  Email me at laurynsue98@gmail.com
+  <p class="orText">or</p>
+  Contact me through LinkedIn!
+</mat-card>
