--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,18 @@
-<h1>Contact</h1>
-<mat-card>
-  Email me at laurynsue98@gmail.com
-  <p class="orText">or</p>
-  Contact me through LinkedIn!
-</mat-card>
+<h1>CONTACT</h1>
+<ul class="navbar-items">
+  <li>
+    <i class="fab fa-linkedin" (click)="openLinkedIn()"></i>
+  </li>
+
+  <li>
+    <i class="fas fa-envelope"></i>
+  </li>
+
+  <li>
+    <i class="fab fa-instagram"></i>
+  </li>
+
+  <li>
+    <i class="fab fa-github"></i>
+  </li>
+</ul>
