--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,1 +1,32 @@
-<p>experience works!</p>
+<h1>EXPERIENCE</h1>
+
+<div fxLayout="row" fxLayoutAlign="center start" class="container">
+  <div class="educationCard">
+    <h2>Education</h2>
+    <div fxLayout="column">
+      <mat-card>
+        <p>Sept 2017 - Oct 2021</p>
+        <h3>University Malaysia of Sarawak (UNIMAS)</h3>
+        <p>Bachelor's Degree of Computer Science (Computational Science)</p>
+        <p>CGPA: 2.76</p>
+        <br />
+        <p>June 2016 - Mei 2017</p>
+        <h3>Kolej Matrikulasi Negeri Sembilan</h3>
+        <p>Matriculation Certificate</p>
+        <p>PST Module 3: Mathematics, Biology, Chemistry & Computer Science</p>
+        <p>CGPA: 3.30</p>
+      </mat-card>
+    </div>
+  </div>
+  <div class="workCard">
+    <h2>Work</h2>
+    <div fxLayout="column">
+      <mat-card>
+        <p>Jan 2020 - Jul 2020</p>
+        <h3>Document Processing Intern</h3>
+        <p>Data Solutions (Sarawak) Sdn. Bhd.</p>
+      </mat-card>
+    </div>
+  </div>
+  <br />
+</div>
