--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,11 +2,17 @@
 h1 {
     text-align: center;
     letter-spacing: 1em;
+    color: #e9ecce;
+}
+
+.container {
+    background-color: #343353;
 }
 
 h3 {
     text-align: center;
     letter-spacing: 0.05em;
+    color: #e9ecce;
 }
 
 .container .cardWrap div{
@@ -39,7 +45,7 @@ mat-card {
     font-weight: 200;
     font-size: 20px;
     line-height: 35px;
-    color: #FFFFFF;
+    color: #e9ecce;
     text-align:justify;
 }
 
@@ -47,12 +53,11 @@ mat-card.cardRow2 {
     width: 200px;
     height: 150px;
     background:transparent;
+    color: #e9ecce;
 }
 
 .downloadButton button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: #e9ecce;
 }
 
 button {
