--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,23 +1,16 @@
 h1 {
     text-align: center;
     letter-spacing: 1em;
+    color: #e9ecce;
 }
 
-mat-card{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    width:400px;
-    height: 100px;
-    background-color: #2E2D49;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 20px;
-    line-height: 35px;
-    color: #FFFFFF;
-    text-align:center;
-    justify-content: center;
+ul.navbar-items li
+{
+    display: inline;
+    padding-left: 0.3em;
+}
+
+ul.navbar-items i {
+    font-size: 30px; 
+    color: white
 }
