--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,9 +16,7 @@
     fxLayoutGap="20px"
   >
     <div fxFlex.lt-md="100" fxFlex="40" class="row1">
-      <img
-        src="https://i.pinimg.com/originals/cd/7a/9a/cd7a9aa16ac398189ad044305ddbd299.jpg"
-      />
+      <img src="/personal-website/src/assets/img/me.jpeg" />
     </div>
     <div fxFlex.lt-md="100" fxFlex="60">
       <mat-card>
