--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,18 +1,9 @@
 <h1>CONTACT</h1>
-<ul class="navbar-items">
-  <li>
-    <i class="fab fa-linkedin" (click)="openLinkedIn()"></i>
-  </li>
 
-  <li>
-    <i class="fas fa-envelope"></i>
-  </li>
-
-  <li>
-    <i class="fab fa-instagram"></i>
-  </li>
-
-  <li>
-    <i class="fab fa-github"></i>
-  </li>
-</ul>
+<div class="container">
+  <div class="socialMedia">
+    <button mat-button>LinkedIn</button>
+    <button mat-button>Email</button>
+    <button mat-button>GitHub</button>
+  </div>
+</div>
