--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <script src="/personal-website/src/assets/js/home.component.js"></script>
 
-<div fxLayout="column" fxLayoutAlign="center center" class="greeting">
+<div fxLayout="column" fxLayoutAlign="center center" class="container">
   <div fxFlex="row">
     <app-greeting></app-greeting>
   </div>
