--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,12 +1,16 @@
 <h1>PROJECT</h1>
 
 <div class="container">
-  <img src="https://i.imgur.com/szxi0eC.png" alt="project 1" class="image" />
+  <img
+    src="/personal-website/src/assets/img/webpage.png"
+    alt="project 1"
+    class="image"
+  />
   <div class="overlay">
     <div class="text">
       Portfolio Website
       <br />
-      TypeScript, HTML, CSS, SCSS, Angular, Angular Material
+      TypeScript, HTML, CSS, Angular, Angular Material
     </div>
   </div>
 </div>
