--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,7 +1,7 @@
 <h1>PROJECT</h1>
 
 <div class="container">
-  <img src="/src/assets/img/webpage.png" alt="project 1" class="image" />
+  <img src="assets/img/webpage.png" alt="project 1" class="image" />
   <div class="overlay">
     <div class="text">
       Portfolio Website
