--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
     fxLayoutGap="20px"
   >
     <div fxFlex.lt-md="100" fxFlex="40" class="row1">
-      <img src="assets/img/me.jpeg" />
+      <img src="https://i.imgur.com/3yJ02rq.jpg" />
     </div>
     <div fxFlex.lt-md="100" fxFlex="60">
       <mat-card>
